--- a/document-api/bitcoin-data/bitcoin.conf
+++ b/document-api/bitcoin-data/bitcoin.conf
@@ -6,7 +6,4 @@ rpcuser=myuser
 rpcpassword=mypassword
 txindex=1
 disablewallet=0
-datacarriersize=500 #para resolver o limite de 80 bytes de hash
-
-[regtest]
-deprecatedrpc=addwitnessaddress
+fallbackfee=0.0001
