--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,19 @@ services:
       - ./document-api/data:/data
     depends_on:
       - bitcoin-core
+  
+  document-front:
+    build: ./document-front
+    container_name: document-front
+    ports:
+      - "3001:3000"
+    environment:
+    - CHOKIDAR_USEPOLLING=true
+    volumes:
+      - ./document-front:/app
+      - /app/node_modules
+    depends_on:
+      - document-api
 
 volumes:
   bitcoin-data:
