--- a/document-front/package.json
+++ b/document-front/package.json
@@ -12,6 +12,7 @@
         "next": "^14.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^4.10.1",
         "socket.io-client": "^4.7.2",
         "i18next": "^23.3.0", 
         "react-i18next": "^13.0.0",
